arrow functions added

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ html {
     text-shadow: 0px 1px 0px #ffffff;
 }
 
-.welcome {
+.myNameIs {
     font-family: 'Montserrat', sans-serif;
     font-size: 25px;
     text-align: center;
