--- a/css/navigation.css
+++ b/css/navigation.css
@@ -11,14 +11,16 @@ html {
     margin: 10px;
     background: #282828;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-evenly;   
 }
 
 .navigation__item {
     margin: 10px;
     padding: 5px;
     color: #282828;
-    flex: 1 1 auto;
+    flex: 1 0 0;
+    word-break: break-word;
+    flex-flow: column wrap;
 }
 
 .navigation__link {
