--- a/css/section.css
+++ b/css/section.css
@@ -20,6 +20,7 @@ html {
 .section__header {
     border: 2px solid rgb(68, 68, 68);
     max-width: 100%;
+    text-transform: uppercase;
 }
 
 .section__paragraph {
